@@ -12,18 +12,22 @@
 #include <errno.h>
 #include <sched.h>
 #include <sys/mman.h>
+#include <sys/time.h>
+#include <sys/resource.h>
 
 static int set_rt_priority(int argc, char **argv)
 {
     int     rtmode;
     struct sched_param p;
-    int     i, not_root;
+    int     i, not_root, priority;
 
     if ((int) geteuid() == 0)
       not_root = 0;
     else
       not_root = 1;
 
+    memset(&p, 0, sizeof(struct sched_param));
+    priority = sched_get_priority_max(SCHED_RR);
     rtmode = 0;
     if (argc > 2) {
       for (i = 1; i <= (argc - 2); i++) {
@@ -40,17 +44,33 @@ static int set_rt_priority(int argc, char **argv)
     if (argc > 1) {
       for (i = 1; i <= (argc - 1); i++) {
         if (!(strncmp(argv[i], "-iadc", 5))) rtmode |= 2;
-	if (!(strncmp(argv[i], "-odac", 5))) rtmode |= 2;
-	if (!(strncmp(argv[i], "-idevaudio", 10))) rtmode |= 2;
-	if (!(strncmp(argv[i], "-odevaudio", 10))) rtmode |= 2;
+        if (!(strncmp(argv[i], "-odac", 5))) rtmode |= 2;
+        if (!(strncmp(argv[i], "-idevaudio", 10))) rtmode |= 2;
+        if (!(strncmp(argv[i], "-odevaudio", 10))) rtmode |= 2;
         /* also check for --sched option, and -d */
         if (!(strcmp(argv[i], "--sched"))) rtmode |= 1;
+        if (!(strncmp(argv[i], "--sched=", 8))) {
+          /* priority value specified */
+          priority = (int) atoi(&(argv[i][8]));
+          if (priority < -20 || priority > sched_get_priority_max(SCHED_RR)) {
+            fprintf(stderr, "--sched: invalid priority value: '%s'\n",
+                            &(argv[i][8]));
+            fprintf(stderr, "The allowed range is:\n");
+            fprintf(stderr, "  -20 to -1: set nice level\n");
+            fprintf(stderr, "          0: normal scheduling, "
+                            "but lock memory\n");
+            fprintf(stderr, "    1 to %d: SCHED_RR with the specified priority "
+                            "(DANGEROUS)\n", sched_get_priority_max(SCHED_RR));
+            return -1;
+          }
+          rtmode |= 1;
+        }
         if (!(strcmp(argv[i], "-d"))) rtmode |= 4;
       }
     }
 
     if (rtmode != 7) {          /* all the above are required to enable */
-      setuid(getuid());         /* give up root permissions */
+      setuid(getuid());         /* error: give up root privileges */
       if (rtmode & 1) {
         fprintf(stderr, "csound: --sched requires -d and either -o dac ");
         fprintf(stderr, "or -o devaudio\n");
@@ -73,12 +93,26 @@ static int set_rt_priority(int argc, char **argv)
     }
 #endif
 
-    /* set round robin mode with max. priority */
-    p.sched_priority = sched_get_priority_max(SCHED_RR);
-    if (sched_setscheduler(0, SCHED_RR, &p) != 0) {
-      fprintf(stderr, "csound: cannot set real-time priority: %s\n",
-                      strerror(errno));
-      return -1;
+    /* set scheduling policy and priority */
+    if (priority > 0) {
+      p.sched_priority = priority;
+      if (sched_setscheduler(0, SCHED_RR, &p) != 0) {
+        fprintf(stderr, "csound: cannot set scheduling policy to "
+                        "SCHED_RR: %s\n", strerror(errno));
+        return -1;
+      }
+    }
+    else if (priority == 0) {
+      p.sched_priority = priority;
+      sched_setscheduler(0, SCHED_OTHER, &p);   /* hope this does not fail ! */
+    }
+    else {
+      /* nice requested */
+      if (setpriority(PRIO_PROCESS, 0, priority) != 0) {
+        fprintf(stderr, "csound: cannot set nice level to %d: %s\n",
+                        priority, strerror(errno));
+        return -1;
+      }
     }
     /* give up root privileges */
     setuid(getuid());
@@ -112,9 +146,9 @@ int main(int argc, char **argv)
     /* load string database files; this should be done here, and not in */
     /* csoundCompile(), as the strings are global to all instances */
     init_getstring(argc, argv);
-    /*	Create Csound. */
+    /*  Create Csound. */
     csound = csoundCreate(NULL);
-    /*	One complete performance cycle. */
+    /*  One complete performance cycle. */
     result = csoundCompile(csound, argc, argv);
     if (!result) {
         while (csoundPerformKsmps(csound) == 0) {
